--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1> "Gigle Contraption" </h1>
 
-    <p> Skool Project Web\n Pls Abandon </p>
+    <p> Skool Project Web <br> Pls Abandon </p>
 
     <script src="script.js"></script>
   </body>
