--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1> "Gigle Contraption" </h1>
+    <h1> The resume is a lie! </h1>
 
     <p> Skool Project Web <br> Pls Abandon </p>
+     <p> Skool Project Web <br> Pls Abandon </p>
+     <p> I have no experience with HTML5 or Python coding at the time of 4/9/2025 <br> THE RESUME IS A LIE. </p>
 
     <script src="script.js"></script>
   </body>
