--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>repl.it sucks</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -14,5 +14,15 @@
      <p> I have no experience with HTML5 or Python coding at the time of 4/9/2025 <br> THE RESUME IS A LIE. </p>
 
     <script src="script.js"></script>
+    <script let haveCheese = True;
+let haveBread = True;
+
+if (haveCheese && haveBread) {
+  console.log('Yay! Ingredients are available for making cheese sandwiches.');
+} else if (haveCheese) {
+  console.log('You can snack on some cheese but there is no bread.');
+} else {
+  console.log('No cheese for you today.');
+}></script>
   </body>
 </html>
