--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ if (haveCheese && haveBread) {
   console.log('You can snack on some cheese but there is no bread.');
 } else {
   console.log('No cheese for you today.');
-}></script>
+}>
+    </script>
   </body>
 </html>
