--- a/index.html
+++ b/index.html
@@ -16,3 +16,15 @@
     <script src="script.js"></script>
   </body>
 </html>
+
+<script let haveCheese = True;
+let haveBread = True;
+
+if (haveCheese && haveBread) {
+  console.log('Yay! Ingredients are available for making cheese sandwiches.');
+} else if (haveCheese) {
+  console.log('You can snack on some cheese but there is no bread.');
+} else {
+  console.log('No cheese for you today.');
+}
+  ></script>
