--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   </body>
 </html>
 
-<script let haveCheese = True;
+<script>
+
+let haveCheese = True;
 let haveBread = True;
 
 if (haveCheese && haveBread) {
@@ -27,4 +29,4 @@ if (haveCheese && haveBread) {
 } else {
   console.log('No cheese for you today.');
 }
-  ></script>
+</script>
