--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 </html>
 
 <script>
-var havebread = False;
-  
-let haveBread = True;
+let haveCheese = 2;
 
-if (haveCheese && haveBread) {
+let haveBread = 2;
+
+if (haveCheese = 2 && haveBread = 2) {
   console.log('Yay! Ingredients are available for making cheese sandwiches.');
-} else if (haveCheese) {
+} else if (haveCheese = 2) {
   console.log('You can snack on some cheese but there is no bread.');
 } else {
   console.log('No cheese for you today.');
